# automake

./: 1.txt  2.txt  Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.ac
autom4te.cache/: output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
include/: errorcode.h
source/: Makefile  Makefile.am  Makefile.in
source/i2c/: Makefile  Makefile.am  Makefile.in  at24c02.c  at24c02.h  i2c.c  i2c.h
source/i2c/.deps/: i2c.Po
source/main/: Makefile  Makefile.am  Makefile.in  main  main.c  main.h
source/main/.deps/: main.Po
source/spi/: Makefile  Makefile.am  Makefile.in  spi.c  spi.h
source/spi/.deps/: spi.Po
